libsoup (2.2.7-1) unstable; urgency=low

  * Hijack package, set myself as Maintainer, GNOME team uploads.
    [debian/control, debian/control.in, debian/rules]
  * Bump up Standards-Version to 3.6.2.
    [debian/control, debian/control.in]
  * Add CDBS' utils.
    [debian/rules]

 -- Loic Minier <lool@dooz.org>  Sat, 11 Feb 2006 21:26:55 +0100

libsoup (2.2.6-1) unstable; urgency=low

  * New upstream release
  * bump package name: libsoup2.2-8

 -- Takuo KITAME <kitame@debian.org>  Sat, 10 Sep 2005 10:49:48 +0900

libsoup (2.2.3-2) unstable; urgency=low

  * -dev: depends on libgnutls11-dev, libxml2-dev (closes: #268037)

 -- Takuo KITAME <kitame@debian.org>  Thu, 31 Mar 2005 17:34:29 +0900

libsoup (2.2.3-1) unstable; urgency=low

  * New upstream release

 -- Takuo KITAME <kitame@debian.org>  Tue, 29 Mar 2005 10:54:50 +0900

libsoup (2.2.2-1) unstable; urgency=low

  * New upstream release

 -- Takuo KITAME <kitame@debian.org>  Fri,  4 Feb 2005 14:19:05 +0900

libsoup (2.2.1-1) unstable; urgency=low

  * New upstream release

 -- Takuo KITAME <kitame@debian.org>  Wed, 13 Oct 2004 11:39:50 +0900

libsoup (2.2.0-2) unstable; urgency=low

  * fix shlibs info

 -- Takuo KITAME <kitame@debian.org>  Tue, 31 Aug 2004 14:34:01 +0900

libsoup (2.2.0-1) unstable; urgency=low

  * New upstream release
  * bump package name to libsoup2.2-7

 -- Takuo KITAME <kitame@debian.org>  Tue, 31 Aug 2004 12:03:56 +0900

libsoup (2.1.13-1) unstable; urgency=low

  * New upstream release
  * bump package name libsoup2.2-3 to libsoup2.2-6

 -- Takuo KITAME <kitame@debian.org>  Mon, 16 Aug 2004 11:58:26 +0900

libsoup (2.1.12-2) unstable; urgency=low

  * build against libgnutls11

 -- Takuo KITAME <kitame@debian.org>  Thu,  5 Aug 2004 18:27:08 +0900

libsoup (2.1.12-1) unstable; urgency=low

  * New upstream release
  * use cdbs

 -- Takuo KITAME <kitame@debian.org>  Tue, 20 Jul 2004 14:55:47 +0900

libsoup (2.1.11-1) unstable; urgency=low

  * New upstream release
